--- a/classtimeschedule/main.ipynb
+++ b/classtimeschedule/main.ipynb
@@ -2,6 +2,31 @@
  "cells": [
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 心理實習排課腳本",
+   "id": "74862bf9c8789133"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 1. 設定組態\n",
+    "\n",
+    "此區塊程式碼用於設定整個排課流程中會使用到的全域變數和參數。\n",
+    "這包括了:\n",
+    "- 輸入檔案的路徑\n",
+    "- 轉換後的資料欄位的定義 (運算中間表格)\n",
+    "- 轉換後的元數據欄位 (運算中間表格)\n",
+    "- 課程名稱列表 (運算中間表格)\n",
+    "- 排課的週數\n",
+    "- 每週對應的原始資料欄位\n",
+    "- 時間區段的字串定義\n",
+    "- 課程和學生的限制條件（如課程最大容量、學生每週可選課數）"
+   ],
+   "id": "1dbccaf64cde8e06"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# config\n",
@@ -20,6 +45,10 @@
     "    '周五上午',\n",
     "    '周五下午'\n",
     "]\n",
+    "meta_data_col = [\n",
+    "    2, 3\n",
+    "]\n",
+    "class_name_list = columns[2:]\n",
     "\n",
     "week_cnt = 8\n",
     "each_week_col = [\n",
@@ -36,17 +65,28 @@
     "    '9:00~12:00',\n",
     "    '14:00~17:00'\n",
     "]\n",
-    "meta_data_col = [\n",
-    "    2, 3\n",
-    "]\n",
-    "class_name_list = columns[2:]\n",
     "\n",
     "class_max_cap = 6\n",
     "student_week_capacity = 1\n"
    ],
-   "id": "64849b871b455b3a",
+   "id": "a1ff709c3cbcc694",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2. 讀取與預處理原始資料\n",
+    "\n",
+    "這個區塊使用 pandas 函式庫來讀取指定的 CSV 檔案 (data.csv)。接著，它會對資料進行初步的清理和整理，包括：\n",
+    "\n",
+    "- 根據提交時間（第一欄）進行排序。\n",
+    "- 根據學號移除重複的報名資料，只保留最新的一筆。\n",
+    "\n",
+    "最後，印出前五筆資料以供檢視。"
+   ],
+   "id": "9688d686cb32f4fd"
   },
   {
    "metadata": {
@@ -66,6 +106,24 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 3. 初始化每週的資料結構\n",
+    "\n",
+    "此區塊程式碼根據設定的週數 (week_cnt)，建立一個陣列 (df_array)\n",
+    "\n",
+    "其中每個元素都是一個空的 pandas DataFrame。\n",
+    "\n",
+    "這些 DataFrame 將用於後續步驟中，分別儲存每一週的學生選課狀態。\n",
+    "\n",
+    "每個 DataFrame 都擁有預先定義好的欄位結構。\n",
+    "\n",
+    "關鍵是每一周是一次上課循環，要依據學生選課在每一週排出實際修課表。"
+   ],
+   "id": "1dc115a794e5c626"
+  },
+  {
    "cell_type": "code",
    "id": "14f7b3662576fcfd",
    "metadata": {},
@@ -80,6 +138,24 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 4. 資料轉換與整理\n",
+    "\n",
+    "這個區塊的目的是將從原始 CSV 讀取的資料，轉換為後續演算法所需的格式。\n",
+    "\n",
+    "它會遍歷每一週的設定，並為每個學生處理其所選擇的時段。\n",
+    "\n",
+    "具體來說，它會將原始表格中表示時間區段的文字（例如 '9:00~12:00'），轉換為布林值（某日上午課程 True 或 False），\n",
+    "\n",
+    "以表示該學生在特定時段是否有空。\n",
+    "\n",
+    "轉換後的資料會被分別填入先前為每一週建立的 DataFrame 中。"
+   ],
+   "id": "cd555619c81c2916"
   },
   {
    "cell_type": "code",
@@ -111,6 +187,36 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 5. 核心排課演算法：最大流模型\n",
+    "\n",
+    "此區塊是整個排課系統的核心。\n",
+    "\n",
+    "它為每一週的資料建立一個網路流模型（Network Flow Model），並使用「最大流最小割定理」（Max-Flow Min-Cut Theorem）來找出最佳的學生與課程時段分配方案。\n",
+    "\n",
+    "建立有向圖\n",
+    "\n",
+    "- 建立圖 (Graph)：為每一週，程式會建立一個有向圖，包含：\n",
+    "- 一個源點 (source) 和一個匯點 (sink)。\n",
+    "- 代表每位學生的節點。\n",
+    "- 代表每個課程時段的節點。\n",
+    "\n",
+    "設定容量 (Capacity)：\n",
+    "\n",
+    "- 從源點到每個學生的邊，容量為學生每週可上的課堂數 (希望學生選一堂，因此都設置為 1)。\n",
+    "- 從學生到其可選時段的邊，容量為 1。(學生一個時段只能上一門課)\n",
+    "- 從課程時段到匯點的邊，容量為該時段的學生上限。(每堂課最多可以承受幾個人)\n",
+    "\n",
+    "分析結果\n",
+    "\n",
+    "- 求解最大流：透過 networkx 函式庫計算從源點到匯點的最大流量。一個成功的分配意味著所有學生都被安排了課程（即從源點流出的流量等於學生總數）。\n",
+    "- 結果分析：最後，程式會分析流量分配的結果，判斷該週的排課是否成功，並將成功分配的學生名單儲存起來。"
+   ],
+   "id": "6ffa5f5e48f39004"
   },
   {
    "cell_type": "code",
@@ -177,6 +283,20 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 6. 匯出排課結果\n",
+    "\n",
+    "最後，這個區塊程式碼會將前一步驟中成功分配的排課結果，匯出成 CSV 檔案。\n",
+    "\n",
+    "它會遍歷儲存著成功結果的 w_ret 字典，為每一週建立一個獨立的 CSV 檔案（例如 week_1_output.csv, week_2_output.csv 等）\n",
+    "\n",
+    "檔案中包含兩欄：「姓名_學號」和該學生被分配到的「時段」。"
+   ],
+   "id": "6dc76d74f423c37a"
   },
   {
    "cell_type": "code",
