--- a/classtimeschedule/main.ipynb
+++ b/classtimeschedule/main.ipynb
@@ -29,10 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "a1ff709c3cbcc694",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:39.855291Z",
+     "start_time": "2025-10-02T16:01:39.851313Z"
+    }
+   },
    "source": [
     "# config\n",
     "file_path = 'data.csv'\n",
@@ -55,9 +58,9 @@
     "]\n",
     "class_name_list = columns[2:]\n",
     "\n",
-    "week_cnt = 8\n",
+    "week_cnt = 7\n",
     "each_week_col = [\n",
-    "    [5, 6, 7, 8, 9],\n",
+    "    # [5, 6, 7, 8, 9],\n",
     "    [10, 11, 12, 13, 14],\n",
     "    [15, 16, 17, 18, 19],\n",
     "    [20, 21, 22, 23, 24],\n",
@@ -71,9 +74,11 @@
     "    '14:00~17:00'\n",
     "]\n",
     "\n",
-    "class_max_cap = 6\n",
+    "class_max_cap = 8\n",
     "student_week_capacity = 1\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -92,12 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e948e2854616f02c",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:39.872265Z",
+     "start_time": "2025-10-02T16:01:39.863081Z"
+    }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -105,7 +112,59 @@
     "source_df.sort_values(by=[source_df.columns[0]], ascending=True, inplace=True)\n",
     "source_df.drop_duplicates(subset=['學號'], keep='last', inplace=True, ignore_index=False)\n",
     "print(source_df.head()) # This will show the first 5 rows of your data"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    時間戳記                     電子郵件地址   姓名       學號 系級（例如：心理三）  \\\n",
+      "49  2025/10/1 上午 9:24:13      liyan6111h3@gmail.com   李嫣  1218025        心理三   \n",
+      "50  2025/10/1 下午 3:49:25  shirley1225.kao@gmail.com  高翊瑄  1218047        心理三   \n",
+      "51  2025/10/1 下午 5:22:57     kaijieli0120@gmail.com  李愷婕  1218026        心理三   \n",
+      "52  2025/10/1 下午 6:15:54        anna60315@gmail.com  胡詠晴  1118012        心理四   \n",
+      "28  2025/10/1 下午 8:19:53    sunny96325845@gmail.com  蔡宇萍  12aa035        醫社三   \n",
+      "\n",
+      "   第一週 [10/27（一）] 第一週 [10/28（二）] 第一週 [10/29（三）] 第一週 [10/30（四）]  \\\n",
+      "49            NaN            NaN            NaN            NaN   \n",
+      "50            NaN            NaN            NaN    14:00~17:00   \n",
+      "51            NaN     9:00~12:00            NaN    14:00~17:00   \n",
+      "52    14:00~17:00            NaN    14:00~17:00            NaN   \n",
+      "28            NaN            NaN            NaN     9:00~12:00   \n",
+      "\n",
+      "             第一週 [10/31（五）]  ... 第七週 [12/08（一）] 第七週 [12/09（二）] 第七週 [12/10（三）]  \\\n",
+      "49                      NaN  ...            NaN            NaN            NaN   \n",
+      "50                      NaN  ...            NaN            NaN    14:00~17:00   \n",
+      "51                      NaN  ...            NaN     9:00~12:00            NaN   \n",
+      "52                      NaN  ...    14:00~17:00            NaN    14:00~17:00   \n",
+      "28  9:00~12:00, 14:00~17:00  ...            NaN            NaN            NaN   \n",
+      "\n",
+      "             第七週 [12/11（四）]           第七週 [12/12（五）] 第八週 [12/15（一）]  \\\n",
+      "49                      NaN               9:00~12:00            NaN   \n",
+      "50              14:00~17:00                      NaN            NaN   \n",
+      "51              14:00~17:00                      NaN            NaN   \n",
+      "52                      NaN               9:00~12:00    14:00~17:00   \n",
+      "28  9:00~12:00, 14:00~17:00  9:00~12:00, 14:00~17:00            NaN   \n",
+      "\n",
+      "   第八週 [12/16（二）] 第八週 [12/17（三）]           第八週 [12/18（四）]  \\\n",
+      "49            NaN    14:00~17:00                      NaN   \n",
+      "50            NaN            NaN              14:00~17:00   \n",
+      "51     9:00~12:00            NaN              14:00~17:00   \n",
+      "52            NaN    14:00~17:00                      NaN   \n",
+      "28            NaN            NaN  9:00~12:00, 14:00~17:00   \n",
+      "\n",
+      "             第八週 [12/19（五）]  \n",
+      "49                      NaN  \n",
+      "50                      NaN  \n",
+      "51                      NaN  \n",
+      "52               9:00~12:00  \n",
+      "28  9:00~12:00, 14:00~17:00  \n",
+      "\n",
+      "[5 rows x 45 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -127,10 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "14f7b3662576fcfd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:39.884739Z",
+     "start_time": "2025-10-02T16:01:39.878231Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -139,7 +201,22 @@
     "print(f\"陣列的長度為：{len(df_array)}\")\n",
     "print(\"\\n第一個 DataFrame：\")\n",
     "print(df_array[0])\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "陣列的長度為：7\n",
+      "\n",
+      "第一個 DataFrame：\n",
+      "Empty DataFrame\n",
+      "Columns: [name, student_id, 周一上午, 周一下午, 周二上午, 周二下午, 周三上午, 周三下午, 周四上午, 周四下午, 周五上午, 周五下午]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -161,10 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c8f5e2039aeb6d5c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:40.006665Z",
+     "start_time": "2025-10-02T16:01:39.894406Z"
+    }
+   },
    "source": [
     "week_idx = 0\n",
     "for cols in each_week_col:\n",
@@ -184,11 +264,119 @@
     "            tmp_df = pd.DataFrame([\n",
     "                tmp_data,\n",
     "            ], columns=columns)\n",
-    "            df_array[week_idx] = pd.concat([df_array[0], tmp_df], ignore_index=True)\n",
+    "            df_array[week_idx] = pd.concat([df_array[week_idx], tmp_df], ignore_index=True)\n",
     "    week_idx = week_idx + 1\n",
     "\n",
     "print(df_array[0])"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   name student_id   周一上午   周一下午   周二上午   周二下午   周三上午   周三下午   周四上午   周四下午  \\\n",
+      "0    李嫣    1218025  False  False  False  False  False   True  False  False   \n",
+      "1   高翊瑄    1218047  False  False  False  False  False  False  False   True   \n",
+      "2   李愷婕    1218026  False  False   True  False  False  False  False   True   \n",
+      "3   胡詠晴    1118012  False   True  False   True  False   True  False  False   \n",
+      "4   蔡宇萍    12aa035  False  False  False  False  False  False   True   True   \n",
+      "5   李家嘉    1218067  False  False  False  False  False  False  False   True   \n",
+      "6   杜依穎    11AA062   True  False   True  False  False  False  False  False   \n",
+      "7   吳翎瑄    1218001  False  False  False  False  False  False  False   True   \n",
+      "8   蘇棨崡    1218004  False  False  False  False  False   True  False   True   \n",
+      "9   劉金淋    1018067  False  False  False   True  False  False  False   True   \n",
+      "10  李艾一    1218043  False  False  False  False  False   True  False   True   \n",
+      "11  許雅淳    1218008  False  False  False  False  False  False  False   True   \n",
+      "12  黃襦香    1218017  False  False   True  False  False  False  False   True   \n",
+      "13  鄭婕衣    1218057  False  False  False  False  False   True  False   True   \n",
+      "14  吳俞葶    1118025   True   True  False   True  False   True   True   True   \n",
+      "15  高嘉晨    1118054  False  False  False  False  False   True  False  False   \n",
+      "16  呂羿臻    1118004  False  False   True  False  False  False  False   True   \n",
+      "17  蔡欣蓓    1118031   True   True  False   True  False  False   True  False   \n",
+      "18  陳信妤    11AA034   True  False  False  False  False  False   True   True   \n",
+      "19  鄭鈞仁    1218024  False  False  False  False  False   True  False   True   \n",
+      "20  沈庭安    1218002  False  False  False  False  False   True  False   True   \n",
+      "21  林芫立    1118034  False  False  False  False  False  False   True  False   \n",
+      "22  何碧欣    1218054  False  False  False   True  False   True  False   True   \n",
+      "23  吳羽庭    1218018  False  False  False  False  False   True  False   True   \n",
+      "24  黃玟綺    1218031  False  False  False  False  False   True  False   True   \n",
+      "25  賴一夫    1218041  False  False  False  False  False   True  False  False   \n",
+      "26  吳慧玟    1218065  False  False  False  False  False   True  False   True   \n",
+      "27  佘欣芳    11AA039  False  False   True   True  False  False  False  False   \n",
+      "28  楊旻蓁    1118017  False   True  False  False  False  False   True   True   \n",
+      "29  林禹芊    1118074  False  False  False  False  False  False  False  False   \n",
+      "30  鄧筱齡    1118020   True  False  False  False  False  False   True  False   \n",
+      "31  莊采芩    1218007  False  False  False  False  False   True  False   True   \n",
+      "32  趙彣庭    1218049  False  False  False  False  False   True  False   True   \n",
+      "33  曾翊婷    1118001  False   True  False  False  False  False   True   True   \n",
+      "34  俞安綺    11AA018  False  False  False  False  False  False  False   True   \n",
+      "35  黃絲柔    1118062  False  False  False  False  False   True   True   True   \n",
+      "36  蕭郁臻    1218068  False  False  False  False  False   True  False  False   \n",
+      "37  林縈君    1218036  False  False  False  False  False  False  False   True   \n",
+      "38  張柏芝    1218003  False  False  False  False  False  False  False   True   \n",
+      "39  黃子瑜    1218015  False  False  False  False  False   True  False   True   \n",
+      "40  洪昱華    1218013  False  False  False  False  False   True  False   True   \n",
+      "41  曾子軒    1118064  False  False  False  False  False  False  False   True   \n",
+      "42  柯旻萱    1118038  False   True   True  False  False   True   True  False   \n",
+      "43  陳柏豪    1218053  False  False  False  False  False   True  False   True   \n",
+      "44  李芸芸    11AA010  False  False  False   True  False   True  False  False   \n",
+      "45  洪子祐    1218006  False  False  False  False   True   True  False   True   \n",
+      "46  鄭利煊    1118058   True   True  False  False  False   True   True  False   \n",
+      "47  吳宥漩    1218030  False  False  False  False  False   True  False   True   \n",
+      "\n",
+      "     周五上午   周五下午  \n",
+      "0    True   True  \n",
+      "1   False  False  \n",
+      "2   False  False  \n",
+      "3   False  False  \n",
+      "4   False  False  \n",
+      "5   False  False  \n",
+      "6   False  False  \n",
+      "7   False  False  \n",
+      "8   False   True  \n",
+      "9   False  False  \n",
+      "10   True   True  \n",
+      "11  False  False  \n",
+      "12  False  False  \n",
+      "13   True  False  \n",
+      "14   True   True  \n",
+      "15  False  False  \n",
+      "16  False  False  \n",
+      "17   True  False  \n",
+      "18  False  False  \n",
+      "19  False  False  \n",
+      "20  False   True  \n",
+      "21  False  False  \n",
+      "22  False   True  \n",
+      "23  False  False  \n",
+      "24  False  False  \n",
+      "25  False   True  \n",
+      "26  False  False  \n",
+      "27  False  False  \n",
+      "28  False  False  \n",
+      "29  False  False  \n",
+      "30   True   True  \n",
+      "31   True  False  \n",
+      "32  False  False  \n",
+      "33   True   True  \n",
+      "34  False  False  \n",
+      "35   True   True  \n",
+      "36   True   True  \n",
+      "37  False  False  \n",
+      "38  False  False  \n",
+      "39   True  False  \n",
+      "40  False  False  \n",
+      "41  False  False  \n",
+      "42   True  False  \n",
+      "43  False  False  \n",
+      "44  False  False  \n",
+      "45  False  False  \n",
+      "46   True   True  \n",
+      "47   True  False  \n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -222,10 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "84edc0f374aee142",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:40.044221Z",
+     "start_time": "2025-10-02T16:01:40.015568Z"
+    }
+   },
    "source": [
     "import networkx as nx\n",
     "\n",
@@ -275,16 +466,36 @@
     "                student_list.append((u, v))\n",
     "\n",
     "    if is_all_student_have_class:\n",
-    "        print(f\"week {w_idx} 成功分配\")\n",
+    "        print(f\"week {w_idx+1} 成功分配\")\n",
     "        # print(len(student_list), student_list)\n",
     "        w_ret[w_idx] = student_list\n",
     "    else:\n",
-    "        print(f\"week {w_idx} 成功失敗\")\n",
+    "        print(f\"week {w_idx+1} 成功失敗\")\n",
     "        print(empty_student_list)\n",
     "    w_idx = w_idx + 1\n",
     "\n",
     "# print(w_ret[1])"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "week 2 成功失敗\n",
+      "['林禹芊_1118074']\n",
+      "week 3 成功分配\n",
+      "week 4 成功失敗\n",
+      "['高翊瑄_1218047']\n",
+      "week 5 成功失敗\n",
+      "['高翊瑄_1218047', '許雅淳_1218008']\n",
+      "week 6 成功分配\n",
+      "week 7 成功分配\n",
+      "week 8 成功失敗\n",
+      "['高翊瑄_1218047', '何碧欣_1218054', '吳羽庭_1218018']\n"
+     ]
+    }
+   ],
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -302,10 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "50212853610a3c05",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-02T16:01:40.098910Z",
+     "start_time": "2025-10-02T16:01:40.080574Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -324,7 +538,21 @@
     "    df.to_csv(output_filename, index=False, encoding='utf-8')\n",
     "\n",
     "    print(f\"資料已成功匯出至 {output_filename}\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[24]\u001B[39m\u001B[32m, line 7\u001B[39m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m w == \u001B[32m0\u001B[39m:\n\u001B[32m      6\u001B[39m     \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m7\u001B[39m data = \u001B[43mw_ret\u001B[49m\u001B[43m[\u001B[49m\u001B[43mw\u001B[49m\u001B[43m]\u001B[49m\n\u001B[32m      9\u001B[39m \u001B[38;5;66;03m# 將資料轉換為 DataFrame，並指定欄位名稱\u001B[39;00m\n\u001B[32m     10\u001B[39m df = pd.DataFrame(data, columns=[\u001B[33m'\u001B[39m\u001B[33m姓名_學號\u001B[39m\u001B[33m'\u001B[39m, \u001B[33m'\u001B[39m\u001B[33m時段\u001B[39m\u001B[33m'\u001B[39m])\n",
+      "\u001B[31mKeyError\u001B[39m: 1"
+     ]
+    }
+   ],
+   "execution_count": 24
   }
  ],
  "metadata": {
