--- a/blockchain-data-science/q7.ipynb
+++ b/blockchain-data-science/q7.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "**題目 B：巨鯨行為追蹤 (User Position Health)**\n",
     "\n",
-    "- **目標**：監控某巨鯨在 Compound V3 上的健康係數。"
+    "- **目標**：監控某巨鯨在 Compound V3 上的進出。"
    ],
    "id": "a838a1ed7585f3eb"
   },
@@ -50,7 +50,7 @@
     "1. 出借方用 Supply (0xd1cf3d156d5f8f0d50f6c122ed609cec09d35c9b9fb3fff6ea0959134dae424e) 把 USDC 存入 contract\n",
     "    - (inner) 會把幣打包成 compoundV3 USDC 給出借方作證明\n",
     "2. 借款方用 SupplyCollateral (0xfa56f7b24f17183d81894d3ac2ee654e3c26388d17a28dbd9549b8114304e1f4) 把 其它幣 存入 contract\n",
-    "    - (inner) 會把抵押物打包成 Wrapped XXXX 給借款方作證明\n",
+    "    - (inner) 會把抵押物存入合約\n",
     "3. 借款方用 withdraw (0x9b1bfa7fa9ee420a16e124f794c35ac9f90472acc99140eb2f6447c714cad8eb) 把 USDC 借出\n",
     "4. 審計者用 absorb 觸發以下兩個方法，把抵押物收納進合約本身，借款償還\n",
     "    - AbsorbCollateral (0x9850ab1af75177e4a9201c65a2cf7976d5d28e40ef63494b44366f86b2f9412e)\n",
