--- a/blockchain-data-science/q8.ipynb
+++ b/blockchain-data-science/q8.ipynb
@@ -757,79 +757,11 @@
     "11. 混幣器合約(0xd90e2f925DA726b50C4Ed8D0Fb90Ad053324F31b): 調用0.1ETH資金池合約(0x12D66f87A04A9E220743712cE6d9bB1B5616B8Fc)\n",
     "12. 嫌疑人1(0x5b5dE62e2b547d42AA16954210fA0cBE4FEeda8f): 從 100ETH資金池 取 200\n",
     "13. 嫌疑人1(0x5b5dE62e2b547d42AA16954210fA0cBE4FEeda8f): 從 10ETH資金池 取 30\n",
-    "14. 嫌疑人1(0x5b5dE62e2b547d42AA16954210fA0cBE4FEeda8f): 利用 swap 合約交易掉手上的所有 ETH\n"
+    "14. 嫌疑人1(0x5b5dE62e2b547d42AA16954210fA0cBE4FEeda8f): 利用 swap 合約交易掉手上的所有 ETH\n",
+    "\n",
+    "ref: [graph](./Q8.md)"
    ],
    "id": "8449f37f421051b1"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "```mermaid\n",
-    "graph TD\n",
-    "    %% 定義節點樣式\n",
-    "    classDef hacker fill:#f9d5e5,stroke:#c83349,stroke-width:2px,color:#000;\n",
-    "    classDef mixer fill:#e0f7fa,stroke:#00bcd4,stroke-width:2px,color:#000;\n",
-    "    classDef contract fill:#fff9c4,stroke:#fbc02d,stroke-width:2px,color:#000;\n",
-    "    classDef relayer fill:#e1bee7,stroke:#8e24aa,stroke-width:2px,color:#000;\n",
-    "    classDef suspect fill:#ffecb3,stroke:#ff6f00,stroke-width:2px,stroke-dasharray: 5 5,color:#000;\n",
-    "\n",
-    "    %% 定義實體節點\n",
-    "    Relayer(\"Relayer(0x033...cfc0)\"):::relayer\n",
-    "    Mixer01(\"0.1ETH 混幣器/資金池(0x12D...B8Fc)\"):::mixer\n",
-    "    Hacker1(\"黑客帳戶1(0x043...fd62)\"):::hacker\n",
-    "    AttackContract(\"攻擊合約(0x79c...9c7e)\"):::contract\n",
-    "    SiloContract(\"Silo 合約(0x160...4085)\"):::contract\n",
-    "    Hacker2(\"黑客帳戶2(0x03a...84e3)\"):::hacker\n",
-    "    MainMixerContract(\"混幣器入口合約(xd90...F31b)\"):::mixer\n",
-    "    Pool100(\"100ETH 資金池(xA16...f291)\"):::mixer\n",
-    "    Pool10(\"10ETH 資金池(x910...9DbF)\"):::mixer\n",
-    "    Pool1(\"1ETH 資金池(x47C...2936)\"):::mixer\n",
-    "\n",
-    "    %% 嫌疑人與變現節點\n",
-    "    Suspect1(\"嫌疑人1(0x5b5...eda8f)\"):::suspect\n",
-    "    Suspect2(\"嫌疑人2(未知地址)\"):::suspect\n",
-    "    SuspectN(\"嫌疑人...N(多個分散地址)\"):::suspect\n",
-    "    SwapContract(\"Swap 交易合約\"):::contract\n",
-    "\n",
-    "    %% 流程連接\n",
-    "    %% 準備階段\n",
-    "    Relayer --\"1. 提出 proof\"--> Mixer01\n",
-    "    Mixer01 --\"2. 提領初始資金 (0.1 ETH)\"--> Hacker1\n",
-    "    Hacker1 --\"4. 發布攻擊合約\"--> AttackContract\n",
-    "\n",
-    "    %% 攻擊階段\n",
-    "    subgraph 攻擊與獲利\n",
-    "        Hacker1 --\"3. 調用合約\"--> AttackContract\n",
-    "        AttackContract --\"5. 操作 Silo 合約\"--> SiloContract\n",
-    "        SiloContract --\"5. 傳送 224 WETH\"--> Hacker1\n",
-    "    end\n",
-    "\n",
-    "    %% 洗錢階段 - 存入\n",
-    "    subgraph 資金轉移與混幣\n",
-    "        Hacker1 --\"6. 轉帳資金\"--> Hacker2\n",
-    "        Hacker2 --\"7. 存入資金\"--> MainMixerContract\n",
-    "        MainMixerContract --\"8. 調用\"--> Pool100\n",
-    "        MainMixerContract --\"9. 調用\"--> Pool10\n",
-    "        MainMixerContract --\"10. 調用\"--> Pool1\n",
-    "        MainMixerContract --\"11. 調用\"--> Mixer01\n",
-    "    end\n",
-    "\n",
-    "    %% 洗錢階段 - 提出\n",
-    "    subgraph 資金提出與變現\n",
-    "        Pool100 -.\"12. 嫌疑人取出 200 ETH\".-> Suspect1\n",
-    "        Pool10 -.\"13. 嫌疑人取出 30 ETH\".-> Suspect1\n",
-    "        Suspect1 -.\"14. 交易掉所有 ETH\".-> SwapContract\n",
-    "\n",
-    "        %% 新增多個嫌疑人示意 (使用虛線表示潛在金流)\n",
-    "        Pool1 -. \"可能是其他嫌疑人\" .-> Suspect2\n",
-    "        Mixer01 -. \"資金分散提領\" .-> SuspectN\n",
-    "        Suspect2 -. \"分散交易變現\" .-> SwapContract\n",
-    "        SuspectN -. \"分散交易變現\" .-> SwapContract\n",
-    "    end\n",
-    "```"
-   ],
-   "id": "be36f7e5a820685d"
   }
  ],
  "metadata": {
